# novel-translator

./: .env.example  .gitignore  README.md  main.py  pack.py  pyproject.toml  translate.py
rules/: chinese.md  common.md  japanese.md  korean.md
rules/en/: chinese.md  common.md  japanese.md  korean.md
rules/vi/: chinese.md  common.md
src/: __init__.py  config.py
src/domain/: __init__.py  chunking.py  glossary.py  illustrations.py  language.py  quality.py  target_language.py  terms.py
src/graph/: builder.py
src/graph/nodes/: chunker.py  context.py  detector.py  learner.py  reviewer.py  translator.py
src/models/: state.py
src/prompts/: __init__.py  detector.md  learner_extract.md  learner_summary.md  reviewer.md  translator_system.md
src/prompts/en/: learner_extract.md  learner_summary.md  reviewer.md  translator_system.md
src/prompts/vi/: learner_extract.md  translator_system.md
src/services/: __init__.py  glossary.py  llm.py  logger.py
src/services/llm/: __init__.py  base.py  factory.py  fallback.py  gemini.py  ollama.py  openrouter.py
src/utils/: display.py  json.py  progress.py  text.py
tests/: README.md  test_builder.py  test_cli.py  test_config.py  test_domain_glossary.py  test_glossary.py  test_learner.py  test_llm.py  test_logger.py  test_progress.py  test_reviewer.py  test_state.py  test_text.py
tests/cli/: test_cli.py  test_pack.py
tests/config/: test_config.py
tests/domain/: test_domain_glossary.py  test_illustrations.py  test_quality.py  test_text.py
tests/graph/: test_builder.py  test_learner_filtering.py
tests/models/: test_state.py
tests/prompts/: test_prompts.py
tests/services/: test_glossary.py  test_llm.py  test_logger.py
tests/utils/: test_json_utils.py  test_progress.py
(+1 files in other folders)
