[project.scripts]
translate = "translate:main"

[project]
name = "novel-translator"
version = "0.1.0"
description = "Novel translation tool: Chinese/Korean/Japanese → Vietnamese"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-core>=1.3.3",
    "langgraph>=1.1.10",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
