[project]
name = "novel-translator"
version = "0.1.0"
description = "Novel translation tool: Chinese/Korean/Japanese → Vietnamese"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "SeventhS"}
]
keywords = ["translation", "novel", "llm", "chinese", "korean", "japanese", "vietnamese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "langchain-core>=1.3.3",
    "langgraph>=1.1.10",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
translate = "translate:main"
pack = "pack:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
